@@ -3,15 +3,17 @@ package com.example.demo.aop;
 import java.lang.reflect.Field;
 import java.sql.ResultSet;
 
-public class StudentMapper {
+public class ORMMapper {
 
     public static <T> T convertToObject(Class<T> classObj, ResultSet rs) {
         try {
-            Object result = Class.forName(classObj.getName()).newInstance();
+            Object result = classObj.getDeclaredConstructor().newInstance();
             Field[] fields = classObj.getDeclaredFields();
             for (Field field : fields) {
-                field.setAccessible(true);
-                if (field.getDeclaredAnnotation(Key.class) != null) field.set(result, rs.getObject(field.getDeclaredAnnotation(Key.class).column()));
+                try {
+                    field.setAccessible(true);
+                    if (field.getDeclaredAnnotation(Key.class) != null) field.set(result, rs.getObject(field.getDeclaredAnnotation(Key.class).column()));
+                } catch (Exception ignored) {}
             }
             return (T) result;
         } catch (Exception ex) {
